kortana-blockchain-rust/build_output.txt
cargo :     Checking kortana-blockchain-rust v0.1.0 
(C:\Users\emi\Desktop\blockchains\kortanablockchain-
devhub\kortana-blockchain-rust)
At line:1 char:30
+ cd kortana-blockchain-rust ; cargo check 2>&1 | 
Out-File -Encoding UT ...
+                              ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Ch 
   ecking ko...lockchain-rust):String) [], RemoteE  
  xception
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `VmType`
 --> src\core\processor.rs:4:66
  |
4 | use crate::types::transaction::{Transaction, 
TransactionReceipt, VmType};
  |                                                 
                 ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `Sha3_256`
 --> src\types\transaction.rs:4:20
  |
4 | use sha3::{Digest, Sha3_256};
  |                    ^^^^^^^^

error[E0599]: no function or associated item named 
`new` found for struct `CoreWrapper<T>` in the 
current scope
   --> src\rpc\mod.rs:245:67
    |
245 | ...                   let mut hasher = 
sha3::Keccak256::new();
    |                                               
          ^^^ function or associated item not found 
in `CoreWrapper<Keccak256Core>`
    |
note: if you're trying to build a new 
`CoreWrapper<Keccak256Core>`, consider using 
`CoreWrapper::<T>::from_core` which returns 
`CoreWrapper<_>`
   --> C:\Users\emi\.cargo\registry\src\index.crates
.io-1949cf8c6b5b557f\digest-0.10.7\src\core_api\wrap
per.rs:70:5
    |
 70 |     pub fn from_core(core: T) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if 
the trait is in scope
help: trait `Digest` which provides `new` is 
implemented but not in scope; perhaps you want to 
import it
    |
  3 + use sha3::Digest;
    |

warning: unused variable: `value`
   --> src\vm\evm.rs:512:25
    |
512 |                     let value = 
Self::u256_to_u128(self.stack.pop()?);
    |                         ^^^^^
    |
    = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an 
underscore
    |
512 |                     let _value = 
Self::u256_to_u128(self.stack.pop()?);
    |                         +
help: you might have meant to pattern match on the 
similarly named constant `MIN_GAS_PRICE`
    |
512 -                     let value = 
Self::u256_to_u128(self.stack.pop()?);
512 +                     let 
parameters::MIN_GAS_PRICE = 
Self::u256_to_u128(self.stack.pop()?);
    |

For more information about this error, try `rustc 
--explain E0599`.
warning: `kortana-blockchain-rust` (lib) generated 
3 warnings
error: could not compile `kortana-blockchain-rust` 
(lib) due to 1 previous error; 3 warnings emitted
